<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin">

    <include layout="@layout/layout_progress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/include_error_empty_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/asset_edit_text"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="@string/invest_asset_hint"
                tools:text="BTC" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/amount_edit_text"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_padding"
                android:gravity="start"
                android:hint="@string/amount_label"
                android:inputType="numberDecimal" />

            <include
                android:id="@+id/invest_progress"
                layout="@layout/layout_progress" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin">

                <Button
                    android:id="@+id/invest_button"
                    style="@style/PrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/invest_action" />

                <TextView
                    android:id="@+id/cancel_investment_button"
                    style="@style/PrimaryActionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/invest_button"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/invest_button"
                    android:text="@string/cancel_investment_action" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>