<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefaultBackground">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/destination_edit_text"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:hint="@string/recipient_label"
        android:inputType="text|textEmailAddress"
        android:paddingEnd="42dp"
        android:paddingRight="42dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_button"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/tx_withdrawal_destination" />

    <ImageView
        android:id="@+id/scan_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_standard_padding"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/half_standard_margin"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="@+id/destination_edit_text"
        app:layout_constraintTop_toTopOf="@+id/destination_edit_text"
        app:srcCompat="@drawable/ic_qr_code_scan" />

    <Button
        android:id="@+id/continue_button"
        style="@style/PrimaryButton.NoBorders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_action"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>