<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/collapsing_balance_appbar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <org.tokend.template.view.touchintercepting.TouchInterceptingLinearLayout
            android:id="@+id/touch_capture_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/layout_progress" />

            <include layout="@layout/include_error_empty_view" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <org.tokend.template.view.PaginationRecyclerView
                    android:id="@+id/history_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <org.tokend.template.view.TxDateTextSwitcher
                    android:id="@+id/date_text_switcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="8dp"
                    android:background="@drawable/tx_date_text_switcher_background"
                    android:measureAllChildren="true"
                    android:visibility="invisible" />

            </RelativeLayout>

        </org.tokend.template.view.touchintercepting.TouchInterceptingLinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_fab"
        style="@style/FloatingButton"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:visibility="gone"
        app:layout_anchor="@id/swipe_refresh"
        app:layout_anchorGravity="bottom|right|end">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/send_fab"
            style="@style/FloatingButtonMenuItem"
            app:fab_label="@string/send_title"
            android:src="@drawable/send" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/receive_fab"
            style="@style/FloatingButtonMenuItem"
            app:fab_label="Receive"
            android:src="@drawable/receive" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/deposit_fab"
            style="@style/FloatingButtonMenuItem"
            app:fab_label="@string/deposit"
            android:src="@drawable/ic_deposit_fab" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/withdraw_fab"
            style="@style/FloatingButtonMenuItem"
            app:fab_label="@string/withdraw_title"
            android:src="@drawable/ic_withdraw_fab" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
